# Aira

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  system_prompt.md  system_prompt.txt
src/: __init__.py  app.py  config.py  container.py
src/db/: database.py  models.py  schema.sql
src/handlers/: commands.py  formatting.py  inline.py  messages.py  middleware.py  panel.py  utils.py  voice.py
src/services/: access.py  brief.py  chats.py  favorites.py  gemini.py  llm.py  llm_factory.py  memory.py  prompts.py  reminders.py  reset.py  settings.py  stats.py  tasks.py
tests/: test_app.py  test_chat_service.py  test_formatting.py  test_memory.py  test_panel.py  test_prompts.py  test_reset.py  test_settings.py
